--- a/quiz_api/index.html
+++ b/quiz_api/index.html
@@ -9,9 +9,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-
-
+    <div class="container container-questions">
+        <div id="app" class="row"></div>
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-right">
+            <a id='check-answer'href="#"class='btn btn-lg mt-5 btn-primary'>Checked</a>
+        </div>
+        <div class="col-md-5 justify-content-right">
+            <a href="#" id="clear-storage" class="btn btn-danger btn-lg mt-5">Clear Results</a>
+        </div>
+        </div>
+    </div>
     <script src="js/quiz.js"></script>
 </body>
 </html>
