Ok I am done with the import module project and now I will be learning about the index db before....

--- a/Lyrics Project/index.html
+++ b/Lyrics Project/index.html
@@ -18,7 +18,7 @@
                     <div id="search" class="search">
                             <h2>Search</h2>
                             <p>Search by song and artist:</p>
-                            <p class="mandatory"><span> * </span>Mandatory</p>
+                            <p class="mandatory"><span> * </span>Mandatory <i>e.g. Metallica, Enter Sandman</i> </p>
                             <form action="#" id="search-form">
                                 <div class="input">
                                     <label for="artist">Artist: <span>*</span></label>
