--- a/IndexedDB/index.html
+++ b/IndexedDB/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <script src="js/app.js"></script>
+    <script src="js/app.js" type="module"></script>
 
 </body>
 </html>
