--- a/HigherOrderFunctions/search.html
+++ b/HigherOrderFunctions/search.html
@@ -93,7 +93,7 @@
     <h1>Results</h1>
     <div id="result"></div>
 
-    <script src="js/search.js"></script>
+    <script src="js/search.js" type="module"></script>
     
 </body>
 </html>
