Creating repositories for all the projects

--- a/nameGeneratorFetchAPI/index.html
+++ b/nameGeneratorFetchAPI/index.html
@@ -43,6 +43,7 @@
                     </div>
 
                     <div class="six columns">
+                        <h6>The API may be down... Check the console...</h6>
                         <div id="result"></div>
                     </div>
                 </div>
