--- a/events-FINISHED/index.html
+++ b/events-FINISHED/index.html
@@ -14,7 +14,7 @@
     <div class="container search-wrapper">
             <div id="search-events" class="card card-body">
                 <h1 class="text-center">Search for Events by Name or City</h1>
-
+                <h6 style="text-align: center;">Sorry!; This API was deprecated in December 2019 😒😒</h6>
                 <div class="form-group">
                         <label for="event-name">Search by Name or City</label>
                         <input type="text" id="event-name" class="form-control" placeholder="Search By Name or City"> 
